--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: techchallenge-fase2
 
   profiles:
-    active: dev #troca aqui para prod caso queira subir apontando para o docker
+    active: prod #troca aqui para prod caso queira subir apontando para o docker
 
 server:
   port: 8080
