--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,17 @@ spring.application.name=estoque
 
 server.port=8081
 
-# MySQL Database Connection Properties
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/fasedois?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
-spring.datasource.username=root
-spring.datasource.password=alecio
+# MySQL Dev Alecio
+# spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://localhost:3306/fasedois?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
+# spring.datasource.username=root
+# spring.datasource.password=alecio
 
+# MySQL Prod
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://mysql-db:3306/techchallenge?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=America/Sao_Paulo
+spring.datasource.username=root
+spring.datasource.password=root
 
 # JPA
 spring.jpa.show-sql=true
@@ -15,8 +20,5 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-
-
 logging.level.org.springframework.security=DEBUG
 spring.main.allow-bean-definition-overriding=true
-
